@@ -11,6 +11,7 @@ Funciones:
     resultante o llamar a un Web Service.
 Cambios
     -- 16/05/2017
+        * Agregado soporte para procesar todos los archivos con extensión *mvol* y luego borrarlos.
         * Modificado tamaño mínimo de archivos que pueden ser procesados.
     -- 27/04/2017
         * Agregado soporte para escribir los datos de intensidad de lluvia en un archivo externo para luego
